Corrected the scroll overflow-y that happens when changing categories

--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,7 @@ body{
 	margin: 0;
 	padding: 0;
 	overflow-x: hidden;
+	overflow-y: hidden;
 	-webkit-overflow-x: hidden;
 	-webkit-scroll-behavior: smooth;
 	scroll-behavior: smooth;
